--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <h1> Student Form </h1>
-<%= form_tag student_path do %>
+<%= form_tag students_path do %>
 
 <label> First Name: </label>
 <%= text_field_tag :'student[first_name]' %> <br>
@@ -7,6 +7,6 @@
 <label> Last Name: </label>
 <%= text_field_tag :'student[last_name]' %> <br>
 
-<%= submit_tag "Submit"%>
+<%= submit_tag "Submit Student" %>
 
 <%end%>
